--- a/index/style.css
+++ b/index/style.css
@@ -2,14 +2,13 @@
     margin: 0;
     padding: 0;
 }
-
 /* Navbar Wrapper */
 .navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 14px 40px;
-    background-color: #ffffff;
+    background-color: white;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
     position: sticky;
     top: 0;
@@ -50,7 +49,7 @@
 }
 
 .nav-middle li a:hover {
-    color: #6f42c1;
+    color: #7886C7;
 }
 
 /* Right - Buttons */
@@ -75,7 +74,7 @@
 
 .create-btn {
     padding: 8px 18px;
-    background-color: #8b5cf6;
+    background-color: #7886C7;
     color: white;
     border: none;
     border-radius: 999px;
@@ -86,7 +85,7 @@
 }
 
 .create-btn:hover {
-    background-color: #7c3aed;
+    background-color: #2D336B;
 }
 
 /* Hamburger Icon (Hidden by default) */
