--- a/login.css
+++ b/login.css
@@ -80,6 +80,14 @@
 .login-btn:hover {
     background-color: #e5e7eb;
 }
+.login-btn a {
+    text-decoration: none;
+    color: black;
+}
+.create-btn a {
+    text-decoration: none;
+    color: white;
+}
 
 .create-btn {
     padding: 8px 18px;
@@ -176,7 +184,7 @@
   width: 850px;
   height: 550px;
   border-radius: 30px;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px;
   overflow: hidden;
   margin: 20px;
 
@@ -194,7 +202,10 @@
   text-align: center;
   padding: 40px;
   z-index: 1;
-  transition: 0.6s ease-in-out 1.2s, visibility 0s 1s;
+  transform: translatex(0%);
+  opacity: 1;
+  visibility: visible;
+  transition: 1.5s ease;
 }
 .form-box-register {
   position: absolute;
@@ -208,8 +219,39 @@
   text-align: center;
   padding: 40px;
   z-index: 1;
-  transition: 0.6s ease-in-out 1.2s, visibility 0s 1s;
+  transform: translatex(-100%);
+  opacity: 0;
+  visibility: hidden;
+  transition: 1.5s ease;
 }
+.image1 {
+  position: absolute;
+  left: 0%;
+  height: 100%;
+  width: 50%;
+  background-image: url(image1.png);
+  border-top-right-radius: 200px;
+  border-bottom-right-radius: 200px;
+  background-size: cover;
+  background-position: center;
+  opacity: 1;
+  transition: 1.5s ease;
+}
+.image2 {
+  position: absolute;
+  left: 0%;
+  height: 100%;
+  width: 50%;
+  border-top-left-radius: 200px;
+  border-bottom-left-radius: 200px;
+  background-image: url(image2b.png);
+  background-size: cover;
+  background-position: center;
+  opacity: 0;
+  visibility: visible;
+  transition: 1.5s ease;
+}
+
 form {
   width: 100%;
 }
@@ -301,35 +343,7 @@ form {
   text-decoration: none;
   color: #7886C7;
 }
-.image {
-  position: absolute;
-  left: 0%;
-  height: 100%;
-  width: 50%;
-  background-image: url(temo-image.png);
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-  color: #333;
-  text-align: center;
-  padding: 40px;
-  z-index: 1;
-  transition: 0.6s ease-in-out 1.2s, visibility 0s 1s;
-}
 /* transition properties */
-.form-box-login {
-  transform: translatex(0%);
-  opacity: 1;
-  visibility: visible;
-  transition: 1s ease;
-}
-.form-box-register {
-  transform: translatex(-100%);
-  opacity: 0;
-  visibility: hidden;
-  transition: 1s ease;
-}
 .container.active .form-box-login {
   transform: translatex(100%);
   opacity: 0;
@@ -340,6 +354,11 @@ form {
   opacity: 1;
   visibility: visible;
 }
-.container.active .image {
+.container.active .image1 {
   transform: translatex(100%);
+  opacity: 0;
+}
+.container.active .image2 {
+  transform: translatex(100%);
+  opacity: 1;
 }
