--- a/style.css
+++ b/style.css
@@ -214,6 +214,7 @@ h1:hover {
     color: #4b5563;
     transition: color 0.3s ease;
 }
+
 .download-box-div {
     display: flex;
     align-items: center;
@@ -223,14 +224,14 @@ h1:hover {
 .download-box {
     height: 150px;
     width: 50%;
-    display: flex;  
+    text-align: center;
+    display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 40px;
     flex-wrap: wrap;
     gap: 10px;
-   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-   border-radius: 10px;
+    box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+    border-radius: 20px;
 }
 
 .link-input {
@@ -264,44 +265,50 @@ h1:hover {
 .download-btn:hover {
     background-color: #7c3aed;
 }
+
 .more-options {
-  width: 100%;
-  max-width: 600px;
-  margin: 20px auto;
-  font-size: 15px;
-  color: #4b5563;
+    position: relative;
+    width: 100%;
+    max-width: 600px;
+    margin: 20px auto;
+    font-size: 15px;
+    color: #4b5563;
 }
 
 .more-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  padding: 12px 20px;
-  border-radius: 8px;
-  cursor: pointer;
-  font-weight: 600;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    cursor: pointer;
+    font-weight: 500;
+}
+.more-header p {
+    opacity: 0.5;
+    display: inline;
 }
 
 .more-header i {
-  font-size: 20px;
-  transition: transform 0.3s ease;
+    font-size: 20px;
+    transition: transform 0.3s ease;
+    opacity: 0.5;
+    display: inline;
 }
 
 .format-list {
-  display: none;
-  flex-direction: column;
-  gap: 10px;
-  padding: 15px 20px;
-  background-color: #ffffff;
-  border: 1px solid #e5e7eb;
-  border-radius: 8px;
-  margin-top: 10px;
+    display: none;
+    flex-direction: column;
+    gap: 10px;
+    padding: 15px 20px;
+    background-color: #ffffff;
+    border: 1px solid #e5e7eb;
+    border-radius: 8px;
+    margin-top: 10px;
 }
 
 .format-list label {
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  gap: 10px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
