--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -179,8 +179,8 @@
 /* style.css */
 
 .hero {
-    width: 70%;
-    margin-left: 15%;
+    width: 60%;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
